# mpl

./: .gitignore  Cargo.toml  README.md  justfile  package-lock.json  spec.md
.github/workflows/: ci.yaml  release.yaml
crates/mplc/: Cargo.toml
crates/mplc/src/: main.rs
doc/adr/: 0001-use-adrs.md
playground/: charts.ts  datasets.ts  editor.ts  integration.test.ts  interpreter.test.ts  interpreter.ts  main.ts  package-lock.json  package.json  styles.css  theme.ts  tsconfig.json  vite.config.ts
src/: lib.rs  parser.rs  query.rs  tests.rs  visitor.rs
src/query/: fmt.rs
src/wasm/: interpreter.rs  steps.rs
src/wasm/completions/: tests.rs
src/wasm/diagnostics/: tests.rs
src/wasm/interpreter/: tests.rs
tests/errors/: cumulative_histogram_no_conversion.mpl  delta_histogram_conversion.mpl
tests/examples/: is.mpl  map-gt.mpl  map-mul.mpl  parser-error.mpl  running_average.mpl-todo  sample.mpl  slo-ingest-rate.mpl  sum_rate.mpl
tests/wasm/: test-playground.mjs
