[package]
name = "mplc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI tools for the Axiom Metrics Processing Language"

[[bin]]
name = "mplc"
path = "src/main.rs"

[[bin]]
name = "mplstdlib"
path = "src/mplstdlib.rs"

[dependencies]
mpl-lang.workspace = true
clap = { version = "4", features = ["derive"] }
miette = { version = "7.6.0", features = ["serde"] }
ron = "0.12"
serde_json = "1"
arborium = { version = "2", default-features = false, features = ["lang-ron", "lang-json"] }
